3006-04-04  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/ddc/print_edid.c:
	Bug #4806: Dump the raw EDID contents in hex to the log file for
	better debugging.  (Philip Prindeville)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Config.c:
	Bug #2142: Make font path logging more readable. (Eduard Fuchs)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* Xprint/Makefile.am:
	* Xprint/pcl/PclArea.c:
	* Xprint/pcl/PclColor.c:
	* Xprint/pcl/PclGC.c:
	* Xprint/pcl/PclInit.c:
	* Xprint/ps/PsInit.c:
	* Xprint/raster/Raster.c:
	Bug #4766: Convert all Xprint drivers to fb.

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbfill.c:
	* fb/fbwindow.c:
	Bug #5478: More use of fbSOlidFillmmx.  (Jim Huang)

2006-04-03  Adam Jackson  <ajax@freedesktop.org>

	* fb/fbmmx.c:
	Bug #6346: Build fix when using gcc -mno-sse. (Jonathan 
	Adamczewski)

2006-04-03  Daniel Stone  <daniel@freedesktop.org>

	* xkb/xkbUtils.c:
	Bug #1358: Make ISO_Prev_Group cycle/wrap as ISO_Next_Group does.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/dmx/glxProxy/glxcmds.c:
	Coverity #38: Dead branch elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* Xext/sync.c:
	Coverity #75: Dead variable elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* os/xdmauth.c:
	Coverity #82: Dead variable elimination.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/glxcmdsswap.c:
	Coverity #271: Fix an unbelievably boneheaded NULL chase.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/xnest/Pixmap.c:
	Coverity #616: Fix a rare memory leak.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* os/xdmauth.c:
	Coverity #833: Fix a rather nasty memory leak.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/dri/dri.c:
	Coverity #983: Move some risky debugging code inside #ifdef 
	DEBUG.

2006-04-02  Adam Jackson  <ajax@freedesktop.org>

	* GL/glx/glxcmds.c:
	Coverity #986: Prevent a NULL chase.
